src/videoio.h

    typedef cv::VideoCapture *VideoCapture;
    typedef cv::VideoWriter *VideoWriter;
typedef void *VideoCapture;
typedef void *VideoWriter;
    bool VideoCapture_OpenWithAPI(VideoCapture v, const char *uri, int apiPreference);
    void VideoCapture_Set(VideoCapture v, int prop, double param);
    int VideoCapture_Read(VideoCapture v, Mat buf);
    void VideoCapture_Release(VideoCapture v);
    // VideoWriter
    VideoWriter VideoWriter_New();
    void VideoWriter_Close(VideoWriter vw);
    void VideoWriter_Open(VideoWriter vw, const char *name, const char *codec, double fps, int width,
                          int height, bool isColor);
    int VideoWriter_IsOpened(VideoWriter vw);
    int VideoWriter_Fourcc(char c1, char c2, char c3, char c4);