packages/dartcv/lib/src/g/videoio.g.dart


  late final _VideoCapture_OpenWithAPIPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Pointer<ffi.Char>,
              ffi.Int, ffi.Pointer<ffi.Bool>)>>('VideoCapture_OpenWithAPI');
  late final _VideoCapture_OpenWithAPI =
      _VideoCapture_OpenWithAPIPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> VideoCapture_OpenWithAPI_Async(
    VideoCapture self,
    ffi.Pointer<ffi.Char> uri,
    int apiPreference,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_OpenWithAPI_Async(
      self,
      uri,
      apiPreference,
      callback,
    );
  }

  late final _VideoCapture_OpenWithAPI_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Pointer<ffi.Char>,
              ffi.Int, imp1.CvCallback_1)>>('VideoCapture_OpenWithAPI_Async');
  late final _VideoCapture_OpenWithAPI_Async =
      _VideoCapture_OpenWithAPI_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, ffi.Pointer<ffi.Char>, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_Open_Async(
    VideoCapture self,
    ffi.Pointer<ffi.Char> uri,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_Open_Async(
      self,
      uri,
      callback,
    );
  }

  late final _VideoCapture_Open_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Pointer<ffi.Char>,
              imp1.CvCallback_1)>>('VideoCapture_Open_Async');
  late final _VideoCapture_Open_Async = _VideoCapture_Open_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VideoCapture, ffi.Pointer<ffi.Char>, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_Read(
    VideoCapture self,
    Mat buf,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _VideoCapture_Read(
      self,
      buf,
      rval,
    );
  }

  late final _VideoCapture_ReadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, Mat, ffi.Pointer<ffi.Int>)>>('VideoCapture_Read');
  late final _VideoCapture_Read = _VideoCapture_ReadPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VideoCapture, Mat, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> VideoCapture_Read_Async(
    VideoCapture self,
    imp1.CvCallback_2 callback,
  ) {
    return _VideoCapture_Read_Async(
      self,
      callback,
    );
  }

  late final _VideoCapture_Read_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, imp1.CvCallback_2)>>('VideoCapture_Read_Async');
  late final _VideoCapture_Read_Async = _VideoCapture_Read_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoCapture, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> VideoCapture_Release(
    VideoCapture self,
  ) {
    return _VideoCapture_Release(
      self,
    );
  }

  late final _VideoCapture_ReleasePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(VideoCapture)>>(
          'VideoCapture_Release');
  late final _VideoCapture_Release = _VideoCapture_ReleasePtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoCapture)>();

  ffi.Pointer<CvStatus> VideoCapture_Release_Async(
    VideoCapture self,
    imp1.CvCallback_0 callback,
  ) {
    return _VideoCapture_Release_Async(
      self,
      callback,
    );
  }

  late final _VideoCapture_Release_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, imp1.CvCallback_0)>>('VideoCapture_Release_Async');
  late final _VideoCapture_Release_Async =
      _VideoCapture_Release_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> VideoCapture_Set(
    VideoCapture self,
    int prop,
    double param,
  ) {
    return _VideoCapture_Set(
      self,
      prop,
      param,
    );
  }

  late final _VideoCapture_SetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, ffi.Int, ffi.Double)>>('VideoCapture_Set');
  late final _VideoCapture_Set = _VideoCapture_SetPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoCapture, int, double)>();

  ffi.Pointer<CvStatus> VideoCapture_Set_Async(
    VideoCapture self,
    int prop,
    double param,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoCapture_Set_Async(
      self,
      prop,
      param,
      callback,
    );
  }

  late final _VideoCapture_Set_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VideoCapture, ffi.Int, ffi.Double,
              imp1.CvCallback_1)>>('VideoCapture_Set_Async');
  late final _VideoCapture_Set_Async = _VideoCapture_Set_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VideoCapture, int, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoCapture_getBackendName(
    VideoCapture self,
    ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
  ) {
    return _VideoCapture_getBackendName(
      self,
      rval,
    );
  }

  late final _VideoCapture_getBackendNamePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  VideoCapture, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'VideoCapture_getBackendName');
  late final _VideoCapture_getBackendName =
      _VideoCapture_getBackendNamePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VideoCapture, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  void VideoWriter_Close(
    VideoWriterPtr self,
  ) {
    return _VideoWriter_Close(
      self,
    );
  }

  late final _VideoWriter_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(VideoWriterPtr)>>(
          'VideoWriter_Close');
  late final _VideoWriter_Close =
      _VideoWriter_ClosePtr.asFunction<void Function(VideoWriterPtr)>();

  ffi.Pointer<CvStatus> VideoWriter_Fourcc(
    int c1,
    int c2,
    int c3,
    int c4,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _VideoWriter_Fourcc(
      c1,
      c2,
      c3,
      c4,
      rval,
    );
  }

  late final _VideoWriter_FourccPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Char, ffi.Char, ffi.Char, ffi.Char,
              ffi.Pointer<ffi.Int>)>>('VideoWriter_Fourcc');
  late final _VideoWriter_Fourcc = _VideoWriter_FourccPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          int, int, int, int, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> VideoWriter_Fourcc_Async(
    int c1,
    int c2,
    int c3,
    int c4,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoWriter_Fourcc_Async(
      c1,
      c2,
      c3,
      c4,
      callback,
    );
  }

  late final _VideoWriter_Fourcc_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Char, ffi.Char, ffi.Char, ffi.Char,
              imp1.CvCallback_1)>>('VideoWriter_Fourcc_Async');
  late final _VideoWriter_Fourcc_Async =
      _VideoWriter_Fourcc_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              int, int, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoWriter_IsOpened(
    VideoWriter self,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _VideoWriter_IsOpened(
      self,
      rval,
    );
  }

  late final _VideoWriter_IsOpenedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoWriter, ffi.Pointer<ffi.Int>)>>('VideoWriter_IsOpened');
  late final _VideoWriter_IsOpened = _VideoWriter_IsOpenedPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoWriter, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> VideoWriter_IsOpened_Async(
    VideoWriter self,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoWriter_IsOpened_Async(
      self,
      callback,
    );
  }

  late final _VideoWriter_IsOpened_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoWriter, imp1.CvCallback_1)>>('VideoWriter_IsOpened_Async');
  late final _VideoWriter_IsOpened_Async =
      _VideoWriter_IsOpened_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VideoWriter, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoWriter_New(
    ffi.Pointer<VideoWriter> rval,
  ) {
    return _VideoWriter_New(
      rval,
    );
  }

  late final _VideoWriter_NewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<VideoWriter>)>>('VideoWriter_New');
  late final _VideoWriter_New = _VideoWriter_NewPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<VideoWriter>)>();

  ffi.Pointer<CvStatus> VideoWriter_NewFromFile(
    ffi.Pointer<ffi.Char> name,
    int fourcc,
    double fps,
    int width,
    int height,
    bool isColor,
    ffi.Pointer<VideoWriter> rval,
  ) {
    return _VideoWriter_NewFromFile(
      name,
      fourcc,
      fps,
      width,
      height,
      isColor,
      rval,
    );
  }

  late final _VideoWriter_NewFromFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Bool,
              ffi.Pointer<VideoWriter>)>>('VideoWriter_NewFromFile');
  late final _VideoWriter_NewFromFile = _VideoWriter_NewFromFilePtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, int, double, int,
          int, bool, ffi.Pointer<VideoWriter>)>();

  ffi.Pointer<CvStatus> VideoWriter_NewFromFile_1(
    ffi.Pointer<ffi.Char> name,
    int apiPreference,
    int fourcc,
    double fps,
    int width,
    int height,
    bool isColor,
    ffi.Pointer<VideoWriter> rval,
  ) {
    return _VideoWriter_NewFromFile_1(
      name,
      apiPreference,
      fourcc,
      fps,
      width,
      height,
      isColor,
      rval,
    );
  }

  late final _VideoWriter_NewFromFile_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Bool,
              ffi.Pointer<VideoWriter>)>>('VideoWriter_NewFromFile_1');
  late final _VideoWriter_NewFromFile_1 =
      _VideoWriter_NewFromFile_1Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, int, int,
              double, int, int, bool, ffi.Pointer<VideoWriter>)>();

  ffi.Pointer<CvStatus> VideoWriter_New_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _VideoWriter_New_Async(
      callback,
    );
  }

  late final _VideoWriter_New_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'VideoWriter_New_Async');
  late final _VideoWriter_New_Async = _VideoWriter_New_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoWriter_Open(
    VideoWriter self,
    ffi.Pointer<ffi.Char> name,
    int fourcc,
    double fps,
    int width,
    int height,
    bool isColor,
  ) {
    return _VideoWriter_Open(
      self,
      name,
      fourcc,
      fps,
      width,
      height,
      isColor,
    );
  }
